--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
     </div>
   </div>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="main.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
 </body>
 
